allow specifying the working directory when starting a process.